# MCP_NetKet

./: README.md  SSH.ipynb  analyze_hubbard.py  analyze_ising.py  fermion_builder.py  mcp_server.py  netket_interface.py  netket_jsons.py  netket_schemas.py  pyproject.toml  ssh_full_spectrum_analysis.py  test_json_manager.ipynb  test_schemas.ipynb
.cursor/: mcp.json
quantum_systems/: system_0474cfc2.json  system_0816a49a.json  system_0ae727cb.json  system_0b9abb65.json  system_0cacd6e8.json  system_133558cd.json  system_15af2fa4.json  system_160318aa.json  system_167db744.json  system_1791ce7d.json  system_1a813f61.json  system_1a994ac0.json  system_1aaa6b97.json  system_1e323ffa.json  system_1e541d60.json  system_20107908.json  system_213bbdf3.json  system_23227fba.json  system_23d7ddd3.json  system_2661ae0a.json  system_2744f162.json  system_27f047b8.json  system_29ab1acc.json  system_29d83b22.json  system_2b85d8db.json  system_2e15a232.json  system_2e500b4f.json  system_30f946f0.json  system_322ce202.json  system_322f6aca.json  system_3233c9f2.json  system_33aac329.json  system_345c946c.json  system_3ce13c69.json  system_41b113d4.json  system_41df6154.json  system_41f71763.json  system_45d196a1.json  system_4b8a2c9d.json  system_4ff75e8d.json  (+80 more)
quantum_systems/system_195d94e7/: system_195d94e7.json
reference_code/: Kagome Heisenberg.ipynb
