[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclifford"
version = "0.1.0"
description = "A modular and efficient Python library for simulating and analyzing quantum systems in the stabilizer formalism."
authors = [
    { name = "EdenCode", email = "info@edencode.ai" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.20.0",
    "numba>=0.56.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/EdenCodeInc/PyCliffordMCP"
Documentation = "https://github.com/EdenCodeInc/PyCliffordMCP#readme"
Repository = "https://github.com/EdenCodeInc/PyCliffordMCP.git"
Issues = "https://github.com/EdenCodeInc/PyCliffordMCP/issues"

[tool.setuptools.packages.find]
include = ["pyclifford*", "mcp_server*"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 